[gd_scene load_steps=8 format=3 uid="uid://b8jit467hectr"]

[ext_resource type="Script" path="res://menu/Node2D.gd" id="1_87ut1"]
[ext_resource type="Texture2D" uid="uid://cix2jr46x4ex0" path="res://assents/tilesets/play.png" id="2_2gd4e"]
[ext_resource type="Shader" path="res://menu/node_2d.gdshader" id="2_rhpxr"]
[ext_resource type="Texture2D" uid="uid://ck4j4jog5lvhq" path="res://assents/tilesets/exit.png" id="3_ci82f"]
[ext_resource type="Texture2D" uid="uid://rwsosdxogsuu" path="res://assents/tilesets/engrenagem.png" id="5_8clrp"]
[ext_resource type="AudioStream" uid="uid://ciqmoia42htyu" path="res://audio/menu.mp3" id="6_pb1k4"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2e2e4"]
shader = ExtResource("2_rhpxr")
shader_parameter/scroll_speed = 0.08
shader_parameter/angle_degrees = 45.0
shader_parameter/repeat_x = 20.0
shader_parameter/repeat_y = 12.0
shader_parameter/row_offset = 1.0
shader_parameter/texture_size = null
shader_parameter/tile_size_x = 1.0
shader_parameter/tile_size_y = 1.0
shader_parameter/bubble_radius = 0.3

[node name="menu" type="Node2D"]
script = ExtResource("1_87ut1")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_2e2e4")
offset_right = 1155.0
offset_bottom = 649.0

[node name="TextureButton" type="TextureButton" parent="."]
offset_left = 76.0
offset_top = 346.0
offset_right = 180.0
offset_bottom = 416.0
scale = Vector2(2, 2)
texture_normal = ExtResource("2_2gd4e")

[node name="TextureButton2" type="TextureButton" parent="."]
offset_left = 79.0
offset_top = 475.0
offset_right = 183.0
offset_bottom = 542.0
scale = Vector2(2, 2)
texture_normal = ExtResource("3_ci82f")

[node name="HSlider" type="HSlider" parent="."]
offset_left = 891.0
offset_top = 29.0
offset_right = 1138.0
offset_bottom = 112.0
rotation = 0.015839
theme_override_constants/center_grabber = 1
theme_override_icons/grabber = ExtResource("5_8clrp")
theme_override_icons/grabber_highlight = ExtResource("5_8clrp")
theme_override_icons/grabber_disabled = ExtResource("5_8clrp")
max_value = 4.0

[node name="menu" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_pb1k4")
autoplay = true

[connection signal="button_down" from="TextureButton" to="." method="_on_texture_button_button_down"]
[connection signal="button_down" from="TextureButton2" to="." method="_on_texture_button_2_button_down"]
[connection signal="value_changed" from="HSlider" to="." method="_on_h_slider_value_changed"]
